# QuantumEdge

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LINKEDIN_DESCRIPTIONS.md  Makefile  README.md  README_ENHANCED.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-minimal.txt  requirements.txt  setup.py  switch_to_real_data.py  test_websocket.py
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  pr.yml  security.yml
.serena/: project.yml
assets/: README.md
benchmarks/: run_all.py
docker/: development.dockerfile  production.dockerfile
docs/: DEVELOPMENT_WORKFLOW.md  cvar_sortino_implementation.md  websocket_optimization.md
examples/: cvar_sortino_example.py  quantum_noise_and_benchmarking_demo.py  websocket_optimization_client.py
frontend/dashboard/: DASHBOARD_README.md  package-lock.json  package.json  tailwind.config.js
notebooks/: 01_getting_started.ipynb  02_quantum_vs_classical.ipynb  03_backtesting_strategies.ipynb  04_advanced_objectives.ipynb  05_risk_analysis.ipynb
scripts/: check_performance_regression.py  commit_template.txt  generate_demo_assets.py  setup_git_hooks.sh
src/: __init__.py
src/adversarial/: __init__.py
src/api/: __init__.py  config.py  deps.py  main.py  models.py
src/backtesting/: __init__.py  engine.py  metrics.py  portfolio.py  strategy.py
src/benchmarking/: __init__.py  quantum_classical_comparison.py  visualization.py
src/data/: __init__.py  base.py  cache.py  models.py  yahoo_finance.py
src/optimization/: __init__.py  classical_solvers.py  mean_variance.py
src/quantum_algorithms/: __init__.py  noise_models.py  qaoa.py  quantum_circuit.py  quantum_gates.py  quantum_volume.py  vqe.py
src/risk_models/: __init__.py
src/streaming/: __init__.py  alpha_vantage_source.py  data_pipeline.py  market_data_factory.py  market_data_source.py  optimization_service.py  portfolio_monitor.py  websocket.py  yahoo_finance_source.py
tests/: __init__.py
tests/integration/: __init__.py  test_cvar_sortino_api.py  test_websocket_optimization_integration.py
tests/unit/: __init__.py  test_alpha_vantage_source.py  test_api.py  test_api_additional.py  test_api_config.py  test_api_deps.py  test_api_endpoints.py  test_api_websocket.py  test_backtesting_engine.py  test_backtesting_metrics.py  test_backtesting_portfolio.py  test_backtesting_strategy.py  test_benchmarking_visualization.py  test_classical_solvers.py  test_cvar_sortino.py  test_data_base.py  test_data_cache.py  test_data_models.py  test_data_pipeline.py  test_market_data_source_comprehensive.py  test_market_data_sources.py  (+17 more)
(+15 files in other folders)
